--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -6,8 +6,8 @@
     <script type="text/javascript" src="/js/app.js"></script>
 </head>
 <body>
-
-<p>Works</p>
-
+    <h1>
+        Test
+    </h1>
 </body>
 </html>
