--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Today I Had</title>
 </head>
 <body>
-    <h1>
-        Test
-    </h1>
+    <div id="app"></div>
+    <script type="text/javascript" src="/js/app.js"></script>
 </body>
 </html>
