--- a/server/views/home.handlebars
+++ b/server/views/home.handlebars
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="app"></div>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="/vendor.js"></script>
+    <script type="text/javascript" src="/app.js"></script>
 </body>
 </html>
