--- a/client/components/header/header.css
+++ b/client/components/header/header.css
@@ -1,11 +1,10 @@
-.header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 7rem;
-    z-index: 9;
-    backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
-    border: 1px solid red;
-}
+/*.header {*/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*right: 0;*/
+    /*height: 4rem;*/
+    /*z-index: 9;*/
+    /*backface-visibility: hidden;*/
+    /*-webkit-backface-visibility: hidden;*/
+/*}*/
