--- a/client/assets/stylesheets/main.css
+++ b/client/assets/stylesheets/main.css
@@ -29,6 +29,15 @@ body{
     padding-right: 15px;
 }
 
+.main-layout{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 4rem;
+    bottom: 4rem;
+    right: 0;
+}
+
 @media (min-width: 576px) {
     .container-mob {
         width: 540px;
