--- a/client/components/header/header.css
+++ b/client/components/header/header.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 4rem;
+    height: 4em;
     z-index: 9;
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
