UI changes on footer

--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -1,3 +1,5 @@
+/*font size*/
+
 .f-size-0_5{
     font-size: 0.5em!important;
 }
@@ -8,6 +10,10 @@
     font-size: 2em!important;
 }
 
+.f-size-2_5{
+    font-size: 2.5em!important;
+}
+
 .f-size-3{
     font-size: 3em!important;
 }
@@ -16,6 +22,70 @@
     font-size: 4em!important;
 }
 
-.w-8 {
-    width: 8em!important;
+/*height*/
+
+.full-height {
+    height: 100%;
 }
+
+.h-2 {
+    height: 2em!important;
+}
+
+/*width*/
+
+.w-2 {
+    width: 2em!important;
+}
+
+.full-width {
+    width: 100%;
+}
+
+
+/* padding */
+
+.px-0{
+    padding-right: 0!important;
+    padding-left: 0!important;
+}
+
+/* extend bootstrap with 5 columns */
+
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+
