Small fixes and additions

--- a/client/assets/stylesheets/main.css
+++ b/client/assets/stylesheets/main.css
@@ -3,206 +3,206 @@ body, html{
     font-size: 97%!important
 }
 
-@media(min-width: 261px) and (max-width: 270px) {
+@media(min-width: 261px) and (max-width: 271px) {
     body, html {
         font-size: 64%!important;
     }
 }
 
-@media(min-width: 271px) and (max-width: 280px) {
+@media(min-width: 271px) and (max-width: 281px) {
     body, html {
         font-size: 65%!important;
     }
 }
 
-@media(min-width: 281px) and (max-width: 290px) {
+@media(min-width: 281px) and (max-width: 291px) {
     body, html {
         font-size: 66%!important;
     }
 }
 
-@media(min-width: 291px) and (max-width: 300px) {
+@media(min-width: 291px) and (max-width: 301px) {
     body, html {
         font-size: 67%!important;
     }
 }
 
-@media(min-width: 301px) and (max-width: 310px) {
+@media(min-width: 301px) and (max-width: 311px) {
     body, html {
         font-size: 68%!important;
     }
 }
 
-@media(min-width: 311px) and (max-width: 320px) {
+@media(min-width: 311px) and (max-width: 321px) {
     body, html {
         font-size: 69%!important;
     }
 }
 
-@media(min-width: 321px) and (max-width: 330px) {
+@media(min-width: 321px) and (max-width: 331px) {
     body, html {
         font-size: 70%!important;
     }
 }
 
-@media(min-width: 331px) and (max-width: 340px) {
+@media(min-width: 331px) and (max-width: 341px) {
     body, html {
         font-size: 71%!important;
     }
 }
 
-@media(min-width: 341px) and (max-width: 350px) {
+@media(min-width: 341px) and (max-width: 351px) {
     body, html {
         font-size: 72%!important;
     }
 }
 
-@media(min-width: 351px) and (max-width: 360px) {
+@media(min-width: 351px) and (max-width: 361px) {
     body, html {
         font-size: 73%!important;
     }
 }
 
-@media(min-width: 361px) and (max-width: 370px) {
+@media(min-width: 361px) and (max-width: 371px) {
     body, html {
         font-size: 74%!important;
     }
 }
 
-@media(min-width: 371px) and (max-width: 380px) {
+@media(min-width: 371px) and (max-width: 381px) {
     body, html {
         font-size: 75%!important;
     }
 }
 
-@media(min-width: 381px) and (max-width: 390px) {
+@media(min-width: 381px) and (max-width: 391px) {
     body, html {
         font-size: 76%!important;
     }
 }
 
-@media(min-width: 391px) and (max-width: 400px) {
+@media(min-width: 391px) and (max-width: 401px) {
     body, html {
         font-size: 77%!important;
     }
 }
 
 
-@media(min-width: 401px) and (max-width: 410px) {
+@media(min-width: 401px) and (max-width: 411px) {
     body, html {
         font-size: 78%!important;
     }
 }
 
-@media(min-width: 411px) and (max-width: 420px) {
+@media(min-width: 411px) and (max-width: 421px) {
     body, html {
         font-size: 79%!important;
     }
 }
 
-@media(min-width: 421px) and (max-width: 430px) {
+@media(min-width: 421px) and (max-width: 431px) {
     body, html {
         font-size: 80%!important;
     }
 }
 
-@media(min-width: 431px) and (max-width: 440px) {
+@media(min-width: 431px) and (max-width: 441px) {
     body, html {
         font-size: 81%!important;
     }
 }
 
-@media(min-width: 441px) and (max-width: 450px) {
+@media(min-width: 441px) and (max-width: 451px) {
     body, html {
         font-size: 82%!important;
     }
 }
 
-@media(min-width: 451px) and (max-width: 460px) {
+@media(min-width: 451px) and (max-width: 461px) {
     body, html {
         font-size: 83%!important;
     }
 }
 
-@media(min-width: 461px) and (max-width: 470px) {
+@media(min-width: 461px) and (max-width: 471px) {
     body, html {
         font-size: 84%!important;
     }
 }
 
-@media(min-width: 471px) and (max-width: 480px) {
+@media(min-width: 471px) and (max-width: 481px) {
     body, html {
         font-size: 85%!important;
     }
 }
 
-@media(min-width: 481px) and (max-width: 490px) {
+@media(min-width: 481px) and (max-width: 491px) {
     body, html {
         font-size: 86%!important;
     }
 }
 
-@media(min-width: 491px) and (max-width: 500px) {
+@media(min-width: 491px) and (max-width: 501px) {
     body, html {
         font-size: 87%!important;
     }
 }
 
-@media(min-width: 501px) and (max-width: 510px) {
+@media(min-width: 501px) and (max-width: 511px) {
     body, html {
         font-size: 88%!important;
     }
 }
 
-@media(min-width: 511px) and (max-width: 520px) {
+@media(min-width: 511px) and (max-width: 521px) {
     body, html {
         font-size: 89%!important;
     }
 }
 
-@media(min-width: 521px) and (max-width: 530px) {
+@media(min-width: 521px) and (max-width: 531px) {
     body, html {
         font-size: 90%!important;
     }
 }
 
-@media(min-width: 531px) and (max-width: 540px) {
+@media(min-width: 531px)  {
     body, html {
-        font-size: 91%!important;
+        font-size: 85%!important;
     }
 }
 
-@media (min-width: 541px) and (max-width: 550px){
-    body, html{
-        font-size: 92%!important;
-    }
-}
+/*@media (min-width: 541px) and (max-width: 551px){*/
+    /*body, html{*/
+        /*font-size: 92%!important;*/
+    /*}*/
+/*}*/
 
 
-@media(min-width: 551px) and (max-width: 560px) {
-    body, html {
-        font-size: 93%!important;
-    }
-}
+/*@media(min-width: 551px) and (max-width: 561px) {*/
+    /*body, html {*/
+        /*font-size: 93%!important;*/
+    /*}*/
+/*}*/
 
-@media(min-width: 561px) and (max-width: 570px) {
-    body, html {
-        font-size: 94%!important;
-    }
-}
+/*@media(min-width: 561px) and (max-width: 571px) {*/
+    /*body, html {*/
+        /*font-size: 94%!important;*/
+    /*}*/
+/*}*/
 
-@media(min-width: 571px) and (max-width: 580px) {
-    body, html {
-        font-size: 95%!important;
-    }
-}
+/*@media(min-width: 571px) and (max-width: 581px) {*/
+    /*body, html {*/
+        /*font-size: 93%!important;*/
+    /*}*/
+/*}*/
 
-/* large screen mobiles */
-@media (min-width: 581px) and (max-width: 767px){
-    body, html {
-        font-size: 96%!important;
-    }
-}
+/*!* large screen mobiles *!*/
+/*@media (min-width: 581px){*/
+    /*body, html {*/
+        /*font-size: 93%!important;*/
+    /*}*/
+/*}*/
 
 .divlevel1{
     width:20em!important;
@@ -237,7 +237,7 @@ body, html{
     position: absolute;
     left: 0;
     top: 5em;
-    bottom: 5em;
+    bottom: 0;
     right: 0;
 }
 
