Footer tabs change color when active + refactoring

--- a/client/assets/stylesheets/colors.css
+++ b/client/assets/stylesheets/colors.css
@@ -2,6 +2,14 @@
     color:white;
 }
 
+.c-black {
+    color: black;
+}
+
+.c-grey {
+    color: grey;
+}
+
 .bg-c-white {
     background-color:white;
 }
