--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -6,6 +6,9 @@
 .f-size-1{
     font-size: 1em!important;
 }
+.f-size-1_5{
+    font-size: 1.5em!important;
+}
 .f-size-2{
     font-size: 2em!important;
 }
@@ -65,6 +68,14 @@
 .px-0{
     padding-right: 0!important;
     padding-left: 0!important;
+}
+
+.pl-0{
+    padding-left: 0!important;
+}
+
+.pr-0{
+    padding-right: 0!important;
 }
 
 /*margin*/
