--- a/client/assets/stylesheets/main.css
+++ b/client/assets/stylesheets/main.css
@@ -223,23 +223,22 @@ body, html{
 }
 /* CONTAINERS */
 /* main container that will make our app fit as mobile size and centered on big screens */
-
+.main-layout{
+    overflow-y: auto;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 5em;
+    bottom: 5em;
+    right: 0;
+}
 .container-mob {
     position: relative;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
     padding-right: 15px;
-}
-
-.main-layout{
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 5em;
-    bottom: 0;
-    right: 0;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media (min-width: 576px) {
@@ -264,4 +263,9 @@ body, html{
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+.form-group.required .control-label:after {
+    content:" *";
+    color:red;
 }
