--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -6,6 +6,12 @@
 .f-size-1{
     font-size: 1em!important;
 }
+.f-size-1_2{
+    font-size: 1.2em!important;
+}
+.f-size-1_3{
+    font-size: 1.3em!important;
+}
 .f-size-1_5{
     font-size: 1.5em!important;
 }
@@ -70,12 +76,20 @@
     padding-left: 0!important;
 }
 
-.pl-0{
-    padding-left: 0!important;
+.pt-0{
+    padding-top: 0!important;
 }
 
 .pr-0{
     padding-right: 0!important;
+}
+
+.pb-0{
+    padding-bottom: 0!important;
+}
+
+.pl-0{
+    padding-left: 0!important;
 }
 
 /*margin*/
@@ -83,6 +97,23 @@
     margin-right: 0!important;
     margin-left: 0!important;
 }
+
+.mt-0{
+    margin-top: 0!important;
+}
+
+.mr-0{
+    margin-right: 0!important;
+}
+
+.mb-0{
+    margin-bottom: 0!important;
+}
+
+.ml-0{
+    margin-left: 0!important;
+}
+
 
 /* extend bootstrap with 5 columns */
 
