--- a/client/assets/stylesheets/main.css
+++ b/client/assets/stylesheets/main.css
@@ -232,13 +232,23 @@ body, html{
     bottom: 5em;
     right: 0;
 }
+
 .container-mob {
     position: relative;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
     min-height: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.container-mob-child {
+    padding-left: 10px;
+    padding-right: 10px;
+    min-height:100%;
+    overflow: hidden;
+    margin-top: 1em;
+    background-color: white;
 }
 
 @media (min-width: 576px) {
