--- a/client/assets/stylesheets/overrides.css
+++ b/client/assets/stylesheets/overrides.css
@@ -22,6 +22,12 @@
      box-shadow: 0 1px 0 0 #009688!important;
  }
 
+.auth0-lock.auth0-lock .auth0-lock-submit,
+.auth0-lock.auth0-lock .auth0-lock-header
+{
+    border-radius: 0!important;
+}
+
 /*bootstrap overrides*/
 
 .nav.nav-tabs {
@@ -45,5 +51,9 @@
 
 .nav.nav-tabs > li > .nav-link.active  {
     color: black!important;
-    border-bottom: 2px solid #009688!important;
+    border-bottom: 3px solid #009688!important;
+}
+
+.dropdown-menu, .btn, .input-group-btn .btn {
+    border-radius:0!important;
 }
