--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -92,14 +92,36 @@
     padding-left: 0!important;
 }
 
+.pl-0_5{
+    padding-left: 0.5em!important;
+}
+
+.pl-1{
+    padding-left: 1em!important;
+}
+
 /*margin*/
 .mx-0{
     margin-right: 0!important;
     margin-left: 0!important;
 }
 
+.my-0{
+    margin-top: 0!important;
+    margin-bottom: 0!important;
+}
+
+.my-1{
+    margin-top: 1em!important;
+    margin-bottom: 1em!important;
+}
+
 .mt-0{
     margin-top: 0!important;
+}
+
+.mt-1{
+    margin-top: 1em!important;
 }
 
 .mr-0{
