moved_presentation_logic_from_redux_store_to_local_state

--- a/client/assets/stylesheets/overrides.css
+++ b/client/assets/stylesheets/overrides.css
@@ -61,6 +61,6 @@
     border-radius: 50%!important;
 }
 
-.btn.btn-raised.btn-primary {
-    background-color: #15854f!important;
-}
+/*.btn.btn-raised.btn-primary {*/
+    /*background-color: #15854f!important;*/
+/*}*/
