--- a/client/components/modals/modal.css
+++ b/client/components/modals/modal.css
@@ -9,10 +9,27 @@
     opacity: .2;
 }
 
-#addUnitModal {
+#addUnitModal, #recipeIngredientsModal {
     margin:0 auto;
-    margin-top: 10em;
     z-index: 9999;
     width: 100%;
     max-width: 540px!important;
+}
+
+#addUnitModal{
+    margin-top: 10em;
+}
+
+#recipeIngredientsModal{
+    margin-top: 6em;
+    height: 50em;
+}
+
+#recipeIngredientsModal .modal-header{
+    padding-top: 1em!important;
+    padding-left: 0!important;
+}
+
+#recipeIngredientsModal .modal-body{
+    padding-top: 0!important;
 }
