--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -90,6 +90,10 @@
     padding-right: 0!important;
     padding-left: 0!important;
 }
+.py-0{
+    padding-top: 0!important;
+    padding-bottom: 0!important;
+}
 
 .pt-0{
     padding-top: 0!important;
@@ -149,6 +153,10 @@
 
 .mt-0{
     margin-top: 0!important;
+}
+
+.mt-0_4{
+    margin-top: 0.4em!important;
 }
 
 .mt-0_5{
