Add daily stats chart on dashboard

--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -161,6 +161,11 @@
     margin-bottom: 0!important;
 }
 
+.my-0_5{
+    margin-top: 0.5em!important;
+    margin-bottom: 0.5em!important;
+}
+
 .my-1{
     margin-top: 1em!important;
     margin-bottom: 1em!important;
