--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -156,6 +156,11 @@
     margin-left: 0!important;
 }
 
+.mx-1{
+    margin-right: 1em!important;
+    margin-left: 1em!important;
+}
+
 .my-0{
     margin-top: 0!important;
     margin-bottom: 0!important;
