--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -86,6 +86,10 @@
     padding: 1em!important;
 }
 
+.pr-0_2{
+    padding-left: 0.2em!important;
+}
+
 .px-0{
     padding-right: 0!important;
     padding-left: 0!important;
@@ -105,6 +109,10 @@
 
 .pr-0{
     padding-right: 0!important;
+}
+
+.pr-0_2{
+    padding-right: 0.2em!important;
 }
 
 .pr-0_3{
