--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -73,6 +73,10 @@
     line-height: 2em!important;
 }
 
+.lh-2_5 {
+    line-height: 2.5em!important;
+}
+
 .lh-3 {
     line-height: 3em!important;
 }
