Back button now in header and various ui fixes

--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -73,6 +73,10 @@
     line-height: 1.5em!important;
 }
 
+.lh-1_7 {
+    line-height: 1.7em!important;
+}
+
 .lh-2 {
     line-height: 2em!important;
 }
