--- a/client/assets/stylesheets/sizesAndPositioning.css
+++ b/client/assets/stylesheets/sizesAndPositioning.css
@@ -9,6 +9,11 @@
 .f-size-1{
     font-size: 1em!important;
 }
+
+.f-size-1_1{
+    font-size: 1.1em!important;
+}
+
 .f-size-1_2{
     font-size: 1.2em!important;
 }
