--- a/client/components/modals/modal.css
+++ b/client/components/modals/modal.css
@@ -29,3 +29,19 @@
 #foodInfoTable tr{
     border-bottom: 1px solid lightgrey;
 }
+
+#follow-friends-btn-container{
+    position:fixed;
+    bottom: 5em;
+    left: 0;
+    width: 100%;
+    text-align:center;
+    z-index: 999;
+}
+
+#follow-friends-btn{
+    width:100%;
+    max-width: 540px!important;
+    margin: 0 auto!important;
+    color:green;
+}
