--- a/client/components/friends/friend/friend.css
+++ b/client/components/friends/friend/friend.css
@@ -7,13 +7,21 @@
 
 #chat{
     position: absolute;
-    font-size: 1.8em;
-    bottom: 2.6em;
-    right: 1.8em;
+    font-size: 20px;
+    bottom: 10px;
+    right: 10px;
     background-color: white;
     border: 1px solid lightgray;
-    height: 1.4em;
-    width: 1.4em;
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
     text-align: center;
+    z-index: 1;
+}
+
+.profileContainer{
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
 }
